archived-reference/4.0/PSDesiredStateConfiguration/Set-DscLocalConfigurationManager.md
---
external help file: Microsoft.Windows.DSC.CoreConfProviders.dll-Help.xml
Locale: en-US
Module Name: PSDesiredStateConfiguration
ms.date: 06/09/2017
online version: https://learn.microsoft.com/previous-versions/powershell/module/psdesiredstateconfiguration/set-dsclocalconfigurationmanager?view=powershell-4.0&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Set-DscLocalConfigurationManager
---

# Set-DscLocalConfigurationManager

## SYNOPSIS
Applies Local Configuration Manager settings to nodes.

## SYNTAX

### ComputerNameSet (Default)
```
Set-DscLocalConfigurationManager [-Path] <String> [[-ComputerName] <String[]>] [-Credential <PSCredential>]
 [-ThrottleLimit <Int32>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

### CimSessionSet
```
Set-DscLocalConfigurationManager [-Path] <String> [-ThrottleLimit <Int32>] -CimSession <CimSession[]> [-WhatIf]
 [-Confirm] [<CommonParameters>]
```

## DESCRIPTION
The **Set-DscLocalConfigurationManager** cmdlet applies Local Configuration Manager settings, or meta-configuration, to nodes.Specify a path to the configuration settings folder.
Specify computers by specifying computer names or by using Common Information Model (CIM) sessions.
If you do not specify a target computer, the cmdlet applies settings to the local computer.

## EXAMPLES

### Example 1: Apply Local Configuration Manager settings
```
PS C:\> Set-DscLocalConfigurationManager -Path "C:\DSC\Configurations\"
```

This command applies the Local Configuration Manager settings from C:\DSC\Configurations\ to the local computer.
After receiving the settings, Local Configuration Manager processes them.

### Example 2: Apply Local Configuration Manager settings by using a CIM session
```
PS C:\> $Session = New-CimSession -ComputerName "Server01" -Credential ACCOUNTS\PattiFuller
PS C:\> Set-DscLocalConfigurationManager -Path "C:\DSC\Configurations\" -CimSession $Session
```

This example applies Local Configuration Manager settings to a computer and applies the settings.
The example creates a CIM session for a computer named Server01 for use with the cmdlet.
Alternatively, create an array of CIM sessions to apply the cmdlet to multiple specified computers.

The first command creates a CIM session by using the **New-CimSession** cmdlet, and then stores the **CimSession** object in the **$Session** variable.
The command prompts you for a password.
For more information, type `Get-Help New-CimSession`.

The second command applies Local Configuration Manager settings from C:\DSC\Configurations\ to the computers identified by the **CimSession** objects stored in the **$Session** variable.
In this example, the **$Session** variable contains a CIM session only for the computer named Server01.
The command applies the settings.
After the receiving the settings, Local Configuration Manager processes them.

## PARAMETERS

### -CimSession
Runs the cmdlet in a remote session or on a remote computer.
Enter a computer name or a session object, such as the output of a [New-CimSession](https://learn.microsoft.com/powershell/module/cimcmdlets/new-cimsession) or [Get-CimSession](https://learn.microsoft.com/powershell/module/cimcmdlets/get-cimsession) cmdlet.
The default is the current session on the local computer.

```yaml
Type: CimSession[]
Parameter Sets: CimSessionSet
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -ComputerName
Specifies an array of computer names.
The cmdlet publishes and applies the configuration settings in the location specified by the **Path** parameter to these computers.

```yaml
Type: String[]
Parameter Sets: ComputerNameSet
Aliases: CN, ServerName

Required: False
Position: 2
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -Credential
Specifies a user name and password, as a **PSCredential** object, for the target computer.
To obtain a **PSCredential** object, use the Get-Credential cmdlet.
For more information, type `Get-Help Get-Credential`.

```yaml
Type: PSCredential
Parameter Sets: ComputerNameSet
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Path
Specifies a file path of a folder that contains configuration settings files.
The cmdlet publishes and applies these Local Configuration Manager settings to computers specified by the **ComputerName** parameter.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ThrottleLimit
Specifies the maximum number of concurrent operations that can be established to run the cmdlet.
If this parameter is omitted or a value of `0` is entered, then Windows PowerShell calculates an optimum throttle limit for the cmdlet based on the number of CIM cmdlets that are running on the computer.
The throttle limit applies only to the current cmdlet, not to the session or to the computer.

```yaml
Type: Int32
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm
Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf
Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Windows PowerShell Desired State Configuration Overview](https://go.microsoft.com/fwlink/?LinkID=311940)

[Get-DscLocalConfigurationManager](Get-DscLocalConfigurationManager.md)



